# budget-cli

./: .coverage  .dockerignore  .gitignore  Dockerfile  GEMINI.md  Justfile  MCP_SERVER.md  README.md  budget.db  budget_cli.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  start_grpc_server.py
budget/: __init__.py  balances.py  budget.py  budget_cli.py  budget_core.py  budget_tui.py  cards.py  categories.py  cli.py  database.py  exceptions.py  exports.py  limits.py  mcp_server.py  models.py  reports.py  transactions.py  utils.py
budget/core/: __init__.py  balances.py  cards.py  categories.py  exports.py  limits.py  manager.py  reports.py  transactions.py
budget/domain/: __init__.py  models.py
budget/importers/: __init__.py  email.py  image.py  llm.py  llm_local.py  pdf.py
budget/infrastructure/: __init__.py  config.py  database.py  health.py
budget/mcp/: __init__.py  handlers.py  tools.py
budget/server/: __init__.py  grpc_server.py  interceptors.py
budget/server/proto/: __init__.py  budget.proto  budget_pb2.py  budget_pb2_grpc.py
tests/: __init__.py  conftest.py  test_balances.py  test_budget.py  test_budget_core.py  test_categories.py  test_exports.py  test_limits.py  test_models.py  test_reports.py  test_transactions.py
