[project]
name = "budget"
version = "0.4.0"
description = "Personal Budget Tracker MCP Server - Expense tracking with auto-import from PDF, images (OCR/multimodal), and email"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pdfplumber>=0.11.7",
    "pytesseract>=0.3.13",
    "anthropic>=0.69.0",
    "openai>=2.3.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

# Import features (optional)
imports = [
    "anthropic>=0.18.0",  # LLM-based transaction extraction (Anthropic)
    "openai>=1.0.0",  # OpenAI-compatible client for local LLM (LM Studio)
    "pdfplumber>=0.10.0",  # PDF text extraction
    "pytesseract>=0.3.10",  # OCR for images
    "Pillow>=10.0.0",  # Image processing
]

# All optional features
all = [
    "budget[imports]",
]

[project.scripts]
budget-mcp = "budget.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=budget",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
